 	ordered factors.

    o	length(<POSIXlt>)  now returns the length of the corresponding
	abstract timedate-vector rather than always 9 (the length of the
	underlying list structure).  (Wish of PR#14073 and PR#10507.)

    o   The readline completion backend no longer sorts possible
    	completions alphabetically (e.g., function argument names) if
    	R is compiled with readline >= 6.


DEPRECATED & DEFUNCT

    o	Bundles of packages are defunct.

    o	stats::clearNames() is defunct: use unname().

    o	Basic regular expressions are defunct, and strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() no longer
	have an 'extended' argument.

    o	methods::trySilent() is defunct.

    o	index.search() (which was deprecated in 2.10.0) is no longer
	exported and has a different argument list.


BUG FIXES

    o	Using with(), eval() etc with a list with some unnamed
	elements now works. (PR#14035)

    o	The "quick" dispatch of S4 methods for primitive functions was
	not happening, forcing a search each time. (Dispatch for true
	functions was not affected.)

    o	Trying to dispatch methods for primitives during the search
	for inherited methods slows that search down and potentially
	could cause an infinite recursion.  An internal switch was
	added to turn off all such methods from findInheritedMethods().

    o	R framework installation (on Mac OS X) would not work properly
	if a rogue Resources directory was present at the top
	level.  Such non-symlink will now be renamed to Resources.old
	(and anything previously named Resources.old removed) as part
	of the framework installation process.



	**************************************************
	*						 *
	*	       2.10 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.10.0 patched


NEW FEATURES

    o	The PCRE library has been updated to version 8.00.

    o	R CMD INSTALL has new options --no-R, --no-libs, --no-data,