@@ -10,7 +10,8 @@
   Select item(s) from a character vector.
 }
 \usage{
-select.list(list, preselect = NULL, multiple = FALSE, title = NULL)
+select.list(list, preselect = NULL, multiple = FALSE, title = NULL,
+             graphics = getOption("menu.graphics"))
 }
 \arguments{
   \item{list}{character. A list of items.}
@@ -19,14 +20,16 @@ select.list(list, preselect = NULL, multiple = FALSE, title = NULL)
     initially.}
   \item{multiple}{logical: can more than one item be selected?}
   \item{title}{optional character string for window title.}
+  \item{graphics}{logical: should a graphical widget be used?}
 }
 \details{
+  The normal default is \code{graphics = TRUE}.
 #ifdef windows
-  This brings up a modal dialog box with a (scrollable) list of items,
-  which can be selected by the mouse.  If \code{multiple} is true,
-  further items can be selected or deselected by holding the control key
-  down whilst selecting, and shift-clicking can be used to select
-  ranges.
+  This  brings up a modal dialog box with a (scrollable) list
+  of items, which can be selected by the mouse.  If \code{multiple} is
+  true, further items can be selected or deselected by holding the
+  control key down whilst selecting, and shift-clicking can be used to
+  select ranges.
 
   Normal termination is via the \sQuote{OK} button or by hitting Enter or
   double-clicking an item.  Selection can be aborted via the
@@ -35,12 +38,15 @@ select.list(list, preselect = NULL, multiple = FALSE, title = NULL)
 #ifdef unix
   Under the Mac OS X GUI this brings up a modal dialog box
   with a (scrollable) list of items, which can be selected by the mouse.
-  
-  Otherwise it displays a text list from which the user can choose by
-  number(s). The \code{multiple = FALSE} case uses \code{\link{menu}}.
-  Preselection is only supported for \code{multiple = TRUE}, where it is
-  indicated by a \code{"+"} preceding the item.
+  On other Unix-like platforms it will use a
+  Tcl/Tk listbox widget if possible.
 #endif
+
+  If \code{graphics} is FALSE or no graphical widget is available it
+  displays a text list from which the user can choose by number(s). The
+  \code{multiple = FALSE} case uses \code{\link{menu}}.  Preselection is
+  only supported for \code{multiple = TRUE}, where it is indicated by a
+  \code{"+"} preceding the item.
   
   It is an error to use \code{select.list} in a non-interactive session. 
 }
